--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@radix-ui/themes": "^3.1.6",
+    "axios": "^1.5.0",
     "classnames": "^2.5.1",
+    "easymde": "^2.18.0",
     "next": "15.0.3",
     "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^5.3.0",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
